--- a/package.json
+++ b/package.json
@@ -21,5 +21,11 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17"
+    },
+    "dependencies": {
+        "startbootstrap-sb-admin-2": "^4.0.2",
+        "vue-router": "^3.0.2",
+        "vue-template-compiler": "^2.6.8",
+        "vuex": "^3.1.0"
     }
 }
