--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "startbootstrap-sb-admin-2": "^4.0.2",
+        "vue-notification": "^1.3.16",
         "vue-router": "^3.0.2",
         "vue-template-compiler": "^2.6.8",
         "vuex": "^3.1.0"
